infer/tests/codetoanalyze/cpp/errors/templates/class_template_instantiate.cpp
../../frontend/templates/class_template_instantiate.cpp